<resources>
    <string name="app_name">MyNDPSongs</string>
    <string name="song_title">Song Title</string>
    <string name="enter_song_title_here">Enter song title here</string>
    <string name="singers">Singers</string>
    <string name="enter_singers_name_here">Enter singers\' name here</string>
    <string name="year">Year</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="enter_year_of_release_here">Enter year of release here</string>
    <string name="title_activity_song_display">SongDisplay</string>
    <string name="insert">INSERT</string>
    <string name="show_all_songs_with_5_stars">SHOW ALL SONGS WITH 5 STARS</string>
    <string name="go_back">GO BACK</string>
    <string name="song_id">Song ID</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="cancel">CANCEL</string>
</resources>